@@ -1,3 +1,6 @@
+Mar 25, 2022
+  go constraints: tuned up logging
+
 Mar 24, 2022
   updated rat lineage (NCBI taxonomy)
   go constraints: switched to new source files (old source files no longer available)
